--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -40,7 +40,7 @@ $bc-red: #bc0000;
 // Font Colors
 $base-background-color: #fff;
 $base-font-color: $dark-gray;
-$action-color: $blue;
+$action-color: #17ab90;
 $highlight-color: tint($action-color, 33%);
 
 // Border
