--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -1,7 +1,7 @@
 body {
   @include font-feature-settings("kern", "liga", "pnum");
-  -webkit-font-smoothing: antialiased;
-  color: $base-font-color;
+  //*-webkit-font-smoothing: antialiased;*//
+  color: #293030;
   font-family: $base-font-family;
   font-size: $base-font-size;
   line-height: $base-line-height;
