サイト名の変更、いい感じのフォント

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,9 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/{{ site.highlightjs_theme }}.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css">
 
+  <!-- font?できるかな -->
+  <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap" rel="stylesheet">
+
   <!-- Favicon and other icons (made with http://www.favicon-generator.org/) -->
   <!--
   <link rel="shortcut icon" href="{{ "/assets/icon/favicon.ico" | prepend: site.baseurl }}" type="image/x-icon">
