--- a/_sass/bourbon/addons/_font-stacks.scss
+++ b/_sass/bourbon/addons/_font-stacks.scss
@@ -29,3 +29,7 @@ $monospace: "Bitstream Vera Sans Mono", "Consolas", "Courier", monospace;
 /// @type List
 
 $verdana: "Verdana", "Geneva", sans-serif;
+
+/// @type List
+
+$sedgwick: 'Sedgwick Ave', cursive;
