homeの見出しを小さく

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -43,6 +43,8 @@ p {
 }
 
 a {
+  //ホームのpostsの見出しを小さくした↓
+  font-size: modular-scale(-1);
   color: $action-color;
   text-decoration: none;
   // transition: color 0.1s linear;
