--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -20,6 +20,7 @@ h6 {
   margin: 0 0 rem($base-font-size);
 }
 h1 {
+  //もともと４
 	font-size: modular-scale(4);
 }
 h2 {
@@ -43,8 +44,6 @@ p {
 }
 
 a {
-  //ホームのpostsの見出しを小さくした↓
-  font-size: modular-scale(-1);
   color: $action-color;
   text-decoration: none;
   // transition: color 0.1s linear;
