--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,9 +1,11 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-161478989-1"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ENG4MJGHXQ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-161478989-1');
+  gtag('config', 'G-ENG4MJGHXQ');
 </script>
+
+<!-- 新しいアナリティクス -->
