--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -91,7 +91,7 @@ pre code.hljs {
 		background-position: 50% 50%;
 		background-size: cover;
 		.title {
-			font-size: modular-scale(6);
+			font-size: modular-scale(3); //元は6
 		}
 		.subtitle, .info {
 			font-size: modular-scale(1);
@@ -263,7 +263,7 @@ pre code.hljs {
 		background-color: $highlight-color;
 		.site-header{
 			.title {
-				font-size: modular-scale(7);
+				font-size: modular-scale(7); //元は7
 			}
 			.subtitle {
 				font-style: italic;
