--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -27,7 +27,7 @@ h2 {
 	font-size: modular-scale(3);
 }
 h3 {
-	font-size: (2);
+	font-size: modular-scale(2);
 }
 h4 {
 	font-size: modular-scale(1);
