より見やすいサイトに

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -117,7 +117,7 @@ pre code.hljs {
 	padding: 0 1em;
 	margin: 0;
 	// Remove this to make header scrollable again
-	position: fixed;
+	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
