--- a/_includes/head.html
+++ b/_includes/head.html
@@ -83,4 +83,6 @@
 	<script type="text/javascript">
 		window.tooltips = []
 	</script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9934641962758531"
+  crossorigin="anonymous"></script>
 </head>
